made small changes

--- a/pages/correlation.html
+++ b/pages/correlation.html
@@ -11,7 +11,7 @@
         <div class="left-bar">
             <h3>Correlation</h3>
         </div>
-        <div class="main-container" style="overflow-y:hidden;">
+        <div class="main-container" >
             <h2>What is Correlation ?</h2>
 <p class="info"> <span style="color:#ff0000;font-weight:bold;">Correlation</span>
     Correlation Analysis is statistical method that is used to discover if there is a relationship between two variables/datasets, and how strong that relationship may be.
