added some new changes for index page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h3>Maths Assignment</h3>
         </div>
         <div class="main-container">
-            <h1>Learn data analysis using <br> <span class="heading">Mean , Median , Mode</span></h1>
-            <h1>(Measure of central tendency)</h1>
+            <h1 style="text-align:center">Learn data analysis using <br> <span class="heading">Measure of Central Tendancy  </span></h1>
+            <h1 style="color:#ff0000"> and Correlation</h1>
            <div class="container-btn" style="display:flex;">
             <a href="pages/home.html">
                 <div class="container-btn" >
